fix spacing for small tab name

--- a/src/renderer/src/pages/table-view/table-view.scss
+++ b/src/renderer/src/pages/table-view/table-view.scss
@@ -32,6 +32,9 @@
 	}
 
 	.tab-title {
+		min-width: 6rem;
+		height: 30px;
+		gap: 0.5rem;
 		justify-content: space-between;
 		display: flex;
 		align-items: center;
